welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:23: error: not found: type color
def faireFleur(c: color) {
                  ^FlowerPot:30: error: not found: value marquer
   	marquer()
        ^