welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers() {
	faireFleur(Color.RED)
	avance(4)
	faireFleur(Color.BLUE)
	recule(2)
	droite()
	avance(2)
	gauche()
	faireFleur(Color.ORANGE)
	avance(2)
	droite()
	avance(2)
	gauche()
	faireFleur(Color.GREEN)
	recule(4)
}





def faireFleur(c: color) {
   	setCouleurBrosse(Color.YELLOW)
   	avance()
   	marquerSol()
   	setCouleurBrosse(c)
   	for (x<- 1 to 4){
   		avance()
   	marquer()
   	recule() 
   	droite()
   	}
   	recule()
}




 def marquerSol() {
 	baisseBrosse()
 	leveBrosse()
 }
